<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.illinois.finalproject.helper.AddMeetingActivity">

    <TextView
        android:id="@+id/add_meeting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/meeting_details_label"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_meeting_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/meeting_name"
        app:layout_constraintBottom_toBottomOf="@id/add_meeting_location_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_meeting_name_text"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_label"/>

    <EditText
        android:id="@+id/add_meeting_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_meeting_name_hint"
        app:layout_constraintBottom_toBottomOf="@id/add_meeting_name_label"
        app:layout_constraintLeft_toRightOf="@id/add_meeting_name_label"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/add_meeting_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/meeting_location"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_time_label"
        app:layout_constraintLeft_toLeftOf="@id/add_meeting_name_label"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_name_label"/>

    <EditText
        android:id="@+id/add_meeting_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_meeting_location_hint"
        app:layout_constraintBottom_toBottomOf="@id/add_meeting_location_label"
        app:layout_constraintLeft_toLeftOf="@id/add_meeting_name_text"/>

    <TextView
        android:id="@+id/add_meeting_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/meeting_time"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_buddies"
        app:layout_constraintLeft_toLeftOf="@id/add_meeting_location_label"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_location_label"/>

    <EditText
        android:id="@+id/add_meeting_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_meeting_time_hint"
        app:layout_constraintBottom_toBottomOf="@id/add_meeting_time_label"
        app:layout_constraintLeft_toLeftOf="@id/add_meeting_location_text"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_meeting_buddies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_time_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_button" />

    <Button
        android:id="@+id/add_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/add_meeting_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_buddies" />

</android.support.constraint.ConstraintLayout>
