<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/recycler_course_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/course_id"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/recycler_course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/course_name"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/recycler_course_id"
        app:layout_constraintTop_toBottomOf="@+id/recycler_course_id" />

    <TextView
        android:id="@+id/recycler_course_dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/course_dates"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/recycler_course_name"
        app:layout_constraintTop_toBottomOf="@+id/recycler_course_name" />

    <TextView
        android:id="@+id/recycler_course_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/section_name"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/recycler_course_dates" />

</android.support.constraint.ConstraintLayout>