<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/recycler_meeting_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/meeting_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/recycler_meeting_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/meeting_location"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@id/recycler_meeting_name"
        app:layout_constraintTop_toBottomOf="@+id/recycler_meeting_name" />

    <TextView
        android:id="@+id/recycler_meeting_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/meeting_time"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/recycler_meeting_location"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/recycler_meeting_buddy_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/meeting_buddy_names"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/recycler_meeting_location"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>