<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="edu.illinois.finalproject.helper.AddBuddyDetailedActivity">

    <TextView
        android:id="@+id/course_id_text"
        android:layout_weight="1"
        android:padding="15dp"
        android:text="@string/course_id"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/course_name"
            android:padding="15dp"
            android:text="@string/course_name"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/course_name_text"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/course_crn"
            android:padding="15dp"
            android:text="@string/course_crn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_crn_text"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/course_section"
            android:padding="15dp"
            android:text="@string/section_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_section_text"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/course_dates"
            android:padding="15dp"
            android:text="@string/course_dates"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_dates_text"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/course_instructors"
            android:padding="15dp"
            android:text="@string/course_instructors"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_instructors_text"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/remove_course_button"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/remove_course_button"
        android:textColor="@color/btnColor"
        android:textSize="20sp" />

</LinearLayout>
