<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.illinois.finalproject.helper.BuddyDetailsActivity">

    <ImageView
        android:id="@+id/buddy_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/buddy_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buddy_name"
        android:text="@string/buddy_name"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buddy_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buddy_image" />

    <TextView
        android:id="@+id/buddy_location"
        android:text="@string/buddy_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/buddy_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buddy_courses" />

    <TextView
        android:id="@+id/buddy_courses"
        android:text="@string/buddy_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/add_buddy_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buddy_location" />

    <Button
        android:id="@+id/add_buddy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_buddy_button"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buddy_courses" />

</android.support.constraint.ConstraintLayout>
