<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
s
    <ImageView
        android:id="@+id/recycler_buddy_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/recycler_buddy_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/buddy_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/recycler_buddy_image"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/recycler_buddy_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/buddy_courses"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/recycler_buddy_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_buddy_name"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/recycler_buddy_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/buddy_location"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/recycler_buddy_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_buddy_courses"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>